Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN13MnE19pg0syRhkb8fgNG",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPuNEBnVa0MNGKZ3HDHLRUt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +115,7 @@
         "\\vec a = \\vec b \\\\\r\n",
         "で表す。\r\n"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -144,7 +145,7 @@
         "\r\n",
         "# %%latex コマンドを入れる前までは # がコメントで latex 内では % コメントで # が使えない。"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,12 +161,12 @@
       "source": [
         "%%latex\r\n",
         "加法 \\quad \\overrightarrow{\\mathrm{OA}}+\\overrightarrow{\\mathrm{AB}}=\\overrightarrow{\\mathrm{OB}}\\\\\r\n",
-        "加法 \\quad \\overrightarrow{\\mathrm{OA}}-\\overrightarrow{\\mathrm{OB}}=\\overrightarrow{\\mathrm{BA}}\\\\\r\n",
+        "減法 \\quad \\overrightarrow{\\mathrm{OA}}-\\overrightarrow{\\mathrm{OB}}=\\overrightarrow{\\mathrm{BA}}\\\\\r\n",
         "実数倍 \\quad k \\overrightarrow{a}\\\\\r\n",
         "交換法則 \\quad \\overrightarrow{a}+\\overrightarrow{b}=\\overrightarrow{b}+\\overrightarrow{a}\\\\\r\n",
         "結合法則 \\quad (\\overrightarrow{a}+\\overrightarrow{b})+\\overrightarrow{c}=\\overrightarrow{a}+(\\overrightarrow{b}+\\overrightarrow{c})"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -186,33 +187,31 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 211
+          "height": 240
         },
         "id": "xAz52PQFUKJI",
-        "outputId": "4f7d6fc2-9135-4787-9ebc-d6175bf3c6de"
+        "outputId": "e0007760-bc49-4943-93c4-a364ac600374"
       },
       "source": [
         "%%latex\r\n",
         "平行は\\, \\overrightarrow{a} \\parallel \\overrightarrow{b} \\, と書く。\\\\\r\n",
-        "ベクトルの平行条件とは\\, \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\\\\\r\n",
+        "ベクトルの平行条件とは\\, \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\r\n",
         "\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Leftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b} となる実数\\, k \\,がある。\\\\\r\n",
-        "\\\\\r\n",
+        " \\\\\r\n",
         "分解 \\\\\r\n",
         "\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\, \\overrightarrow{a} と \\overrightarrow{b} が平行でないとき, \\\\\r\n",
         "任意のベクトル\\overrightarrow{p} は、次の形にただ1通りに表される。\\\\\r\n",
         "\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b} \\quad ただし,\\, s,\\, t\\, は実数。\\\\\r\n",
-        "このことから、次の性質が成り立つ。k,l,m,n\\, は実数とする。\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n"
+        "このことから、次の性質が成り立つ。k,l,m,n\\, は実数とする。 \\\\\r\n",
+        "k\\overrightarrow{a} + l \\overrightarrow{b} \\Leftrightarrow  k=m,\\, l=n \\\\\r\n",
+        "特に\\,  k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Leftrightarrow  k=l=0 "
       ],
-      "execution_count": 79,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "平行は\\, \\overrightarrow{a} \\parallel \\overrightarrow{b} \\, と書く。\\\\\nベクトルの平行条件とは\\, \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\\\\\n\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Leftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b} となる実数\\, k \\,がある。\\\\\n\\\\\n分解 \\\\\n\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\, \\overrightarrow{a} と \\overrightarrow{b} が平行でないとき, \\\\\n任意のベクトル\\overrightarrow{p} は、次の形にただ1通りに表される。\\\\\n\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b} \\quad ただし,\\, s,\\, t\\, は実数。\\\\\nこのことから、次の性質が成り立つ。k,l,m,n\\, は実数とする。",
+            "text/latex": "平行は\\, \\overrightarrow{a} \\parallel \\overrightarrow{b} \\, と書く。\\\\\nベクトルの平行条件とは\\, \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\n\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Leftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b} となる実数\\, k \\,がある。\\\\\n \\\\\n分解 \\\\\n\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\, \\overrightarrow{a} と \\overrightarrow{b} が平行でないとき, \\\\\n任意のベクトル\\overrightarrow{p} は、次の形にただ1通りに表される。\\\\\n\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b} \\quad ただし,\\, s,\\, t\\, は実数。\\\\\nこのことから、次の性質が成り立つ。k,l,m,n\\, は実数とする。 \\\\\nk\\overrightarrow{a} + l \\overrightarrow{b} \\Leftrightarrow  k=m,\\, l=n \\\\\n特に\\,  k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Leftrightarrow  k=l=0 ",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -229,7 +228,10 @@
         "id": "Q3gWUMvSUYQq"
       },
       "source": [
-        ""
+        "# ベクトルの成分、成分による演算\r\n",
+        "# 座標平面の原点を O とし、ベクトル a に対して a = OA となる点 A をとり、\r\n",
+        "# A の座標を (a1, a2) とするとき、a は次のように表される。\r\n",
+        "# 基本ベクトル表示\r\n"
       ],
       "execution_count": null,
       "outputs": []
