--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -1077,15 +1077,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "De-N0TDcq1YN"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "AzzGRXcJRLVn",
@@ -1123,30 +1114,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tqISIHLwpP_P"
-      },
-      "source": [
-        "# 練習問題"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "0O1SWSw4SMjp"
       },
       "source": [
-        "### 複素関数\n",
-        "\n",
-        "複素関数 $f(z) = f(x + i y ) = u (x, y) + iv(x, y)$ が点 $z_0 = x_0 + iy_0$において正則であるための必要十分条件は、$z_0$ のある $\\varepsilon$ 近傍 $\\Delta (z_0, \\varepsilon)$ においてコーシー・リーマン方程式\n",
-        "\n",
-        "$$\n",
-        "\\begin {eqnarray}\n",
-        "\\frac{\\partial u}{\\partial x} &=& \\frac{\\partial v}{\\partial y} \\\\\n",
-        "\\frac{\\partial u}{\\partial y} &=& - \\frac{\\partial v}{\\partial x}\n",
-        "\\end {eqnarray}\n",
-        "$$\n",
-        "\n",
-        "を満たすことである。"
+        "# 複素関数\n"
       ]
     },
     {
@@ -1155,25 +1126,37 @@
         "id": "jEwDgPrKU07h",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 64
+          "height": 279
         },
-        "outputId": "ae60a918-1b2a-49a6-ae9b-247f4968cd1f"
+        "outputId": "65853420-5d73-421e-d516-6c9ad228d9ba"
       },
       "source": [
         "%%latex\n",
-        "\\displaystyle\n",
+        "複素関数   \\\\\n",
+        "f(z) = f(x + i y ) = u (x, y) + iv(x, y) \\\\\n",
+        "が点 \\\\\n",
+        "z_0 = x_0 + iy_0 \\\\\n",
+        "において正則であるための必要十分条件は、 \\\\\n",
+        "z_0 \n",
+        "のある \n",
+        "\\varepsilon \n",
+        "近傍 \\\\\n",
+        "\\Delta (z_0, \\varepsilon) \\\\\n",
+        "においてコーシー・リーマン方程式 \\\\\n",
         "\n",
         "\\begin {array}{ccc}\n",
-        "\\frac{\\partial u}{\\partial x} &=& \\frac{\\partial v}{\\partial y} \\\\\n",
-        "\\frac{\\partial u}{\\partial y} &=& - \\frac{\\partial v}{\\partial x}\n",
-        "\\end {array}"
+        "    \\displaystyle \\frac{\\partial u}{\\partial x} &=& \\displaystyle \\frac{\\partial v}{\\partial y} \\\\\n",
+        "    \\displaystyle \\frac{\\partial u}{\\partial y} &=& \\displaystyle - \\frac{\\partial v}{\\partial x}\n",
+        "\\end {array}\n",
+        "\\\\\n",
+        "を満たすことである。"
       ],
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\n\n\\begin {array}{ccc}\n\\frac{\\partial u}{\\partial x} &=& \\frac{\\partial v}{\\partial y} \\\\\n\\frac{\\partial u}{\\partial y} &=& - \\frac{\\partial v}{\\partial x}\n\\end {array}",
+            "text/latex": "複素関数   \\\\\nf(z) = f(x + i y ) = u (x, y) + iv(x, y) \\\\\nが点 \\\\\nz_0 = x_0 + iy_0 \\\\\nにおいて正則であるための必要十分条件は、 \\\\\nz_0 \nのある \n\\varepsilon \n近傍 \\\\\n\\Delta (z_0, \\varepsilon) \\\\\nにおいてコーシー・リーマン方程式 \\\\\n\n\\begin {array}{ccc}\n    \\displaystyle \\frac{\\partial u}{\\partial x} &=& \\displaystyle \\frac{\\partial v}{\\partial y} \\\\\n    \\displaystyle \\frac{\\partial u}{\\partial y} &=& \\displaystyle - \\frac{\\partial v}{\\partial x}\n\\end {array}\n\\\\\nを満たすことである。",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -1190,14 +1173,7 @@
         "id": "JCnkFEK7n0GD"
       },
       "source": [
-        "### 空間曲線\n",
-        "$c(t) = (x (t), y(t), z(t))$ によって与えられる空間曲線 $c$ の $c(0)$ を始点として $c(t)$ までの弧長を $s(t)$ とすると\n",
-        "</br></br>\n",
-        "$$\n",
-        "s(t) = \\int_0^t \\sqrt { (\\frac {dx}{dt})^2 + (\\frac {dy}{dt})^2 + (\\frac {dz}{dt})^2}\n",
-        "$$\n",
-        "</br>\n",
-        "と表される"
+        "# 空間曲線\n"
       ]
     },
     {
@@ -1206,22 +1182,27 @@
         "id": "zBzYoUr9o6CI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 61
+          "height": 145
         },
-        "outputId": "29bf1807-c380-4626-ba95-02602f996044"
+        "outputId": "c1c9e928-e3ba-472c-e6d1-90dda08b8ebe"
       },
       "source": [
         "%%latex\n",
-        "\\displaystyle\n",
+        "c(t) = (x (t), y(t), z(t)) \\\\\n",
+        "によって与えられる空間曲線 c の \\\\\n",
+        "c(0) を始点として c(t) までの弧長を s(t) とすると \\\\\n",
         "\n",
-        "s(t) = \\int_0^t \\sqrt { (\\frac {dx}{dt})^2 + (\\frac {dy}{dt})^2 + (\\frac {dz}{dt})^2}"
+        "s(t) = \\displaystyle \\int_0^t \\sqrt { (\\frac {dx}{dt})^2 \n",
+        "       + (\\frac {dy}{dt})^2 + (\\frac {dz}{dt})^2}\n",
+        "\\\\\n",
+        "と表される。"
       ],
-      "execution_count": null,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\n\ns(t) = \\int_0^t \\sqrt { (\\frac {dx}{dt})^2 + (\\frac {dy}{dt})^2 + (\\frac {dz}{dt})^2}",
+            "text/latex": "c(t) = (x (t), y(t), z(t)) \\\\\nによって与えられる空間曲線 c の \\\\\nc(0) を始点として c(t) までの弧長を s(t) とすると \\\\\n\ns(t) = \\displaystyle \\int_0^t \\sqrt { (\\frac {dx}{dt})^2 \n       + (\\frac {dy}{dt})^2 + (\\frac {dz}{dt})^2}\n\\\\\nと表される。",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -1238,15 +1219,7 @@
         "id": "v9f0D-eFpCl3"
       },
       "source": [
-        "### 微分可能\n",
-        "\n",
-        "関数 $f$ が開区間 $I$ 上で $n$ 回微分可能であるとする。 このとき、$a, b \\in I$ に対し、\n",
-        "</br></br></br>\n",
-        "$$\n",
-        "f(b) = f(a)+ \\frac{f'(a)}{1!} (b - a) + \\frac{f''(a)}{2!} (b - a)^2 + \\cdots + \\frac{f^{(n - 1)}(a)}{(n - 1)!} (b - a)^{(n - 1)} + R_n(c)\n",
-        "$$\n",
-        "</br>\n",
-        "を満たす $c$ が $a$ と $b$ の間に存在する。"
+        "# 微分可能\n"
       ]
     },
     {
@@ -1255,22 +1228,28 @@
         "id": "hoLm8yHerEru",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 59
+          "height": 124
         },
-        "outputId": "e1da833d-2322-4432-915d-6d556698cfe1"
+        "outputId": "d26eb9d5-f334-46fe-c1ec-281aa3301da4"
       },
       "source": [
+        "# 微分可能\n",
         "%%latex\n",
-        "\\displaystyle\n",
+        "関数 f が開区間 I 上で n 回微分可能であるとする。 \\\\\n",
+        "このとき、a, b \\in I に対し、\\\\\n",
         "\n",
-        "f(b) = f(a)+ \\frac{f'(a)}{1!} (b - a) + \\frac{f''(a)}{2!} (b - a)^2 + \\cdots + \\frac{f^{(n - 1)}(a)}{(n - 1)!} (b - a)^{(n - 1)} + R_n(c)\n"
+        "f(b) = \\displaystyle f(a)+ \\frac{f'(a)}{1!} (b - a) \n",
+        "    + \\frac{f''(a)}{2!} (b - a)^2 + \\cdots \n",
+        "    + \\frac{f^{(n - 1)}(a)}{(n - 1)!} (b - a)^{(n - 1)} + R_n(c)\n",
+        "\\\\\n",
+        "を満たす c が a と b の間に存在する。\n"
       ],
-      "execution_count": null,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\n\nf(b) = f(a)+ \\frac{f'(a)}{1!} (b - a) + \\frac{f''(a)}{2!} (b - a)^2 + \\cdots + \\frac{f^{(n - 1)}(a)}{(n - 1)!} (b - a)^{(n - 1)} + R_n(c)",
+            "text/latex": "\n関数 f が開区間 I 上で n 回微分可能であるとする。 \\\\\nこのとき、a, b \\in I に対し、\\\\\n\nf(b) = \\displaystyle f(a)+ \\frac{f'(a)}{1!} (b - a) \n    + \\frac{f''(a)}{2!} (b - a)^2 + \\cdots \n    + \\frac{f^{(n - 1)}(a)}{(n - 1)!} (b - a)^{(n - 1)} + R_n(c)\n\\\\\nを満たす c が a と b の間に存在する。",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -1287,34 +1266,7 @@
         "id": "R-e13l9GrQ43"
       },
       "source": [
-        "### $n$ 次正方行列\n",
-        "</br>\n",
-        "$$\n",
-        "J (\\alpha, m) = \\begin {bmatrix}\n",
-        "                    \\alpha & 1 & 0 & \\ldots & 0 \\\\\n",
-        "                    0 & \\alpha & 1 & \\ddots & \\vdots \\\\\n",
-        "                    \\vdots & \\ddots & \\ddots & \\ddots & 0 \\\\\n",
-        "                    \\vdots &  & \\ddots & \\ddots & 1 \\\\\n",
-        "                    0 & \\ldots & \\ldots & 0 & \\alpha\n",
-        "                \\end {bmatrix}\n",
-        "$$\n",
-        "</br>\n",
-        "を Jordan 細胞と呼ぶ。 正方行列 $A$ が正則行列 $P$ によって\n",
-        "</br></br>\n",
-        "$$\n",
-        "\\begin {array} {lcl}\n",
-        "P^{-1} A P &=& J(\\alpha_1, m_1) \\oplus J(\\alpha_2, m_2) \\oplus \\cdots \\oplus J(\\alpha_k, m_k)  \\\\\n",
-        "&=& \\begin {bmatrix}\n",
-        "        J(\\alpha_1, m_1) & & & \\\\\n",
-        "        & J(\\alpha_2, m_2) & & \\\\\n",
-        "        & & \\ddots & \\\\\n",
-        "        & & & j(\\alpha_k, m_k)\n",
-        "    \\end {bmatrix}\n",
-        "\\end {array}\n",
-        "$$\n",
-        "</br>\n",
-        "と Jordan 細胞の直和になるとき、これを $A$ の Jordan 標準形と呼ぶ。\n",
-        "\n"
+        "# n次正方行列\n"
       ]
     },
     {
@@ -1323,52 +1275,21 @@
         "id": "PtaIIJSRwUfX",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 153
+          "height": 297
         },
-        "outputId": "238d9cdc-b21f-409e-be6a-65cc58aabcf6"
+        "outputId": "c7549507-b480-4c84-a4db-8f99be8681d1"
       },
       "source": [
+        "# n次正方行列\n",
         "%%latex\n",
-        "\\displaystyle\n",
-        "\n",
         "J (\\alpha, m) = \\begin {bmatrix}\n",
         "                    \\alpha & 1 & 0 & \\ldots & 0 \\\\\n",
         "                    0 & \\alpha & 1 & \\ddots & \\vdots \\\\\n",
         "                    \\vdots & \\ddots & \\ddots & \\ddots & 0 \\\\\n",
         "                    \\vdots &  & \\ddots & \\ddots & 1 \\\\\n",
         "                    0 & \\ldots & \\ldots & 0 & \\alpha\n",
-        "                \\end {bmatrix}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "\\displaystyle\n\nJ (\\alpha, m) = \\begin {bmatrix}\n                    \\alpha & 1 & 0 & \\ldots & 0 \\\\\n                    0 & \\alpha & 1 & \\ddots & \\vdots \\\\\n                    \\vdots & \\ddots & \\ddots & \\ddots & 0 \\\\\n                    \\vdots &  & \\ddots & \\ddots & 1 \\\\\n                    0 & \\ldots & \\ldots & 0 & \\alpha\n                \\end {bmatrix}",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bdvtu7fYwI1W",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        },
-        "outputId": "1a89e48a-9af7-4d7a-f938-4297cb928f92"
-      },
-      "source": [
-        "%%latex\n",
-        "\\displaystyle\n",
-        "\n",
+        "                \\end {bmatrix} \\\\\n",
+        "を Jordan 細胞と呼ぶ。 正方行列 A が正則行列 P によって \\\\\n",
         "\\begin {array} {lcl}\n",
         "P^{-1} A P &=& J(\\alpha_1, m_1) \\oplus J(\\alpha_2, m_2) \\oplus \\cdots \\oplus J(\\alpha_k, m_k)  \\\\\n",
         "&=& \\begin {bmatrix}\n",
@@ -1377,14 +1298,15 @@
         "        & & \\ddots & \\\\\n",
         "        & & & j(\\alpha_k, m_k)\n",
         "    \\end {bmatrix}\n",
-        "\\end {array}\n"
+        "\\end {array} \\\\\n",
+        "と Jordan 細胞の直和になるとき、これを A の Jordan 標準形と呼ぶ。\n"
       ],
-      "execution_count": null,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\n\n\\begin {array} {lcl}\nP^{-1} A P &=& J(\\alpha_1, m_1) \\oplus J(\\alpha_2, m_2) \\oplus \\cdots \\oplus J(\\alpha_k, m_k)  \\\\\n&=& \\begin {bmatrix}\n        J(\\alpha_1, m_1) & & & \\\\\n        & J(\\alpha_2, m_2) & & \\\\\n        & & \\ddots & \\\\\n        & & & j(\\alpha_k, m_k)\n    \\end {bmatrix}\n\\end {array}",
+            "text/latex": "J (\\alpha, m) = \\begin {bmatrix}\n                    \\alpha & 1 & 0 & \\ldots & 0 \\\\\n                    0 & \\alpha & 1 & \\ddots & \\vdots \\\\\n                    \\vdots & \\ddots & \\ddots & \\ddots & 0 \\\\\n                    \\vdots &  & \\ddots & \\ddots & 1 \\\\\n                    0 & \\ldots & \\ldots & 0 & \\alpha\n                \\end {bmatrix} \\\\\nを Jordan 細胞と呼ぶ。 正方行列 A が正則行列 P によって \\\\\n\\begin {array} {lcl}\nP^{-1} A P &=& J(\\alpha_1, m_1) \\oplus J(\\alpha_2, m_2) \\oplus \\cdots \\oplus J(\\alpha_k, m_k)  \\\\\n&=& \\begin {bmatrix}\n        J(\\alpha_1, m_1) & & & \\\\\n        & J(\\alpha_2, m_2) & & \\\\\n        & & \\ddots & \\\\\n        & & & j(\\alpha_k, m_k)\n    \\end {bmatrix}\n\\end {array} \\\\\nと Jordan 細胞の直和になるとき、これを A の Jordan 標準形と呼ぶ。",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -1401,7 +1323,25 @@
         "id": "wdOsVm25xi6O"
       },
       "source": [
-        "### 二項関係\n",
+        "# 二項関係\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "De-N0TDcq1YN"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kyKAHNQ0qTLo"
+      },
+      "source": [
+        "\n",
         "\n",
         "**定義 1** 集合 $X$ 上の二項関係 $\\rho$ について、次の性質を考える。\n",
         "\n",
