--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -101,7 +101,7 @@
         "x = 3\n",
         "$$\n",
         "\n",
-        "これをセルマジックの `%%latex` で書くとつぎのようになる。"
+        "これをセルマジックの `%%latex` で書くと次のようになる。"
       ]
     },
     {
@@ -110,20 +110,27 @@
         "id": "b5fjp5twb95X",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 39
+          "height": 79
         },
-        "outputId": "75f4095a-f1dd-4cec-8dbc-35512981db7c"
+        "outputId": "776f7b72-54f1-4ddb-a418-b8aae7f861ba"
       },
       "source": [
+        "# 実験学習。 マークダウンでテキストの中に latex を入れることができる。\n",
+        "# $$\n",
+        "# x = 3\n",
+        "# $$\n",
+        "# これをセルマジックの `%%latex` で書くと次のようになる。\n",
         "%%latex\n",
-        "x = 3"
+        "実験学習。 マークダウンでテキストの中に\\text{latex}を入れることができる。\\\\\n",
+        "x = 3 \\\\\n",
+        "これをセルマジックの\\text{latex}で書くと次のようになる。\\\\"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "x = 3",
+            "text/latex": "実験学習。 マークダウンでテキストの中に\\text{latex}を入れることができる。\\\\\nx = 3 \\\\\nこれをセルマジックの\\text{latex}で書くと次のようになる。\\\\",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -132,6 +139,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RLjJ7URGdV1Z"
+      },
+      "source": [
+        "# マークダウンと %%latex の違い\r\n",
+        "1. テキストセルのマークダウンの中の数式はドルマークで括られるが、%%latexでは"
       ]
     },
     {
@@ -282,23 +299,24 @@
         "id": "AbyrchbOJqBH",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
+          "height": 119
         },
-        "outputId": "418fd3e2-635d-4281-e9f7-4f3e6e4185cd"
+        "outputId": "e831176d-e3a8-42df-9d53-d817de11f325"
       },
       "source": [
         "%%latex\r\n",
-        "この本は\\,$35.50\\,です。 \\\\\r\n",
+        "この本は\\,\\$35.50\\,です。 \\\\\r\n",
         "ドルマークエスケープする必要はない。\\\\\r\n",
         "\\$ バックスラッシュをつけるとこうなる。\\\\\r\n",
-        "`$` バッククオートで書くとこうなる。"
+        "`\\$` バッククオートで書くとこうなる。\\\\\r\n",
+        "x"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "この本は\\,$35.50\\,です。 \\\\\nドルマークエスケープする必要はない。\\\\\n\\$ バックスラッシュをつけるとこうなる。\\\\\n`$` バッククオートで書くとこうなる。",
+            "text/latex": "この本は\\,\\$35.50\\,です。 \\\\\nドルマークエスケープする必要はない。\\\\\n\\$ バックスラッシュをつけるとこうなる。\\\\\n`\\$` バッククオートで書くとこうなる。\\\\\nx",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -1329,15 +1347,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "De-N0TDcq1YN"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "kyKAHNQ0qTLo"
       },
       "source": [
@@ -1359,24 +1368,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vPJ7sqxYSIxz"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 148
+        },
+        "id": "vPJ7sqxYSIxz",
+        "outputId": "2e41d040-8a66-441a-bd03-38da19ed2f4c"
       },
       "source": [
         "%%latex\r\n",
-        "**定義 1** 集合 $X$ 上の二項関係 $\\rho$ について、次の性質を考える。\r\n",
+        "定義 1 集合 X 上の二項関係 \\rho について、次の性質を考える。\\\\\r\n",
         "\r\n",
-        "1. すべての $x \\in X$ について、$x \\rho x$ が成り立つ。(反射律)\r\n",
-        "\r\n",
-        "1. $x, y \\in X$ について、$x \\rho y$ ならば $y \\rho x$ が成り立つ。(対称律)\r\n",
-        "\r\n",
-        "1. $x, y, z \\in X$ について、$x \\rho y$ かつ $y \\rho z$ ならば $x \\rho z$ が成り立つ。(推移律)\r\n",
-        "\r\n",
-        "1. $x, y \\in X$ について、$x \\rho y$ かつ $y \\rho x$ ならば $x = y$ が成り立つ。(反対称律)\r\n",
-        "\r\n",
-        "性質 $\\it{1, 2, 3}$ を満たす二項関係を**同値関係**と呼び、性質 $\\it{1, 3, 4}$ を満たす二項関係を**順序関係**と呼ぶ。"
+        "1. すべての x \\in X について、x \\rho x が成り立つ。(反射律) \\\\\r\n",
+        "2. x, y \\in X について、x \\rho y ならば y \\rho x が成り立つ。(対称律) \\\\\r\n",
+        "3. x, y, z \\in X について、x \\rho y かつ y \\rho z ならば x \\rho z が成り立つ。(推移律) \\\\\r\n",
+        "4. x, y \\in X について、x \\rho y かつ y \\rho x ならば x = y が成り立つ。(反対称律) \\\\\r\n",
+        "性質 \\it{1, 2, 3} を満たす二項関係を同値関係と呼び、性質 \\it{1, 3, 4} を満たす二項関係を順序関係と呼ぶ。 \\\\"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "定義 1 集合 X 上の二項関係 \\rho について、次の性質を考える。\\\\\n\n1. すべての x \\in X について、x \\rho x が成り立つ。(反射律) \\\\\n2. x, y \\in X について、x \\rho y ならば y \\rho x が成り立つ。(対称律) \\\\\n3. x, y, z \\in X について、x \\rho y かつ y \\rho z ならば x \\rho z が成り立つ。(推移律) \\\\\n4. x, y \\in X について、x \\rho y かつ y \\rho x ならば x = y が成り立つ。(反対称律) \\\\\n性質 \\it{1, 2, 3} を満たす二項関係を同値関係と呼び、性質 \\it{1, 3, 4} を満たす二項関係を順序関係と呼ぶ。 \\\\",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "De-N0TDcq1YN"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qfLdDqI0ae6-",
+        "outputId": "a0d2afa3-63db-4a88-e691-c84e8361bb85",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "source": [
+        "%%latex\r\n",
+        "%%this"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "%%this",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
