Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNHBfLyo+kO/fVEdfKqzujV",
+      "authorship_tag": "ABX9TyMDgtsdyeSNJhH26eSZtn8q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -226,11 +226,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q3gWUMvSUYQq",
-        "outputId": "970be989-df5d-44aa-f59c-42a8b989e5ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
-        }
+          "height": 212
+        },
+        "outputId": "548684b5-0a0b-45dd-be64-8e713cd8cbd1"
       },
       "source": [
         "# ベクトルの成分、成分による演算\r\n",
@@ -240,15 +240,49 @@
         "\\quad \\mathrm{A} の座標を(a_1,a_2)とするとき、\\overrightarrow{a} は次のように表される。\\\\\r\n",
         "\\quad 基本ベクトル表示 \\quad \\overrightarrow{a}=a_1 \\overrightarrow{e_1} + a_2 \\overrightarrow{e_2}\\\\\r\n",
         "\\quad \\overrightarrow{e_1}=(1,0),\\overrightarrow{e_2}=(0,1) を基本ベクトルという。\\\\[1em]\r\n",
-        "2.相等 \\quad (a_1,a_2)=(b_1,b_2) \\Leftrightarrow a_1=b_1,a_2=b_2\\\\\r\n",
-        "\\quad 特に (a_1,a_2)=\\overrightarrow{0} \\Leftrightarrow a_1=0, a_2=0"
+        "2. 相等 \\quad (a_1,a_2)=(b_1,b_2) \\Leftrightarrow a_1=b_1,a_2=b_2\\\\\r\n",
+        "\\quad 特に (a_1,a_2)=\\overrightarrow{0} \\Leftrightarrow a_1=0, a_2=0\\\\[1em]"
       ],
-      "execution_count": 14,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "ベクトルの成分、成分による演算 \\\\\n1. 座標平面の原点を O とし、ベクトル \\overrightarrow{a} に対して \\overrightarrow{a}  = \\overrightarrow{\\mathrm{OA}} となる点 \\mathrm{A} をとり、\\\\\n\\quad \\mathrm{A} の座標を(a_1,a_2)とするとき、\\overrightarrow{a} は次のように表される。\\\\\n\\quad 基本ベクトル表示 \\quad \\overrightarrow{a}=a_1 \\overrightarrow{e_1} + a_2 \\overrightarrow{e_2}\\\\\n\\quad \\overrightarrow{e_1}=(1,0),\\overrightarrow{e_2}=(0,1) を基本ベクトルという。\\\\[1em]\n2.相等 \\quad (a_1,a_2)=(b_1,b_2) \\Leftrightarrow a_1=b_1,a_2=b_2\\\\\n\\quad 特に (a_1,a_2)=\\overrightarrow{0} \\Leftrightarrow a_1=0, a_2=0",
+            "text/latex": "ベクトルの成分、成分による演算 \\\\\n1. 座標平面の原点を O とし、ベクトル \\overrightarrow{a} に対して \\overrightarrow{a}  = \\overrightarrow{\\mathrm{OA}} となる点 \\mathrm{A} をとり、\\\\\n\\quad \\mathrm{A} の座標を(a_1,a_2)とするとき、\\overrightarrow{a} は次のように表される。\\\\\n\\quad 基本ベクトル表示 \\quad \\overrightarrow{a}=a_1 \\overrightarrow{e_1} + a_2 \\overrightarrow{e_2}\\\\\n\\quad \\overrightarrow{e_1}=(1,0),\\overrightarrow{e_2}=(0,1) を基本ベクトルという。\\\\[1em]\n2.相等 \\quad (a_1,a_2)=(b_1,b_2) \\Leftrightarrow a_1=b_1,a_2=b_2\\\\\n\\quad 特に (a_1,a_2)=\\overrightarrow{0} \\Leftrightarrow a_1=0, a_2=0\\\\[1em]",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sr8GDOHwY3Lg",
+        "outputId": "4d87efa7-5faf-42bd-ec0b-b9754818f47c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        }
+      },
+      "source": [
+        "%%latex\r\n",
+        "3. 大きさ \\quad \\overrightarrow{a}=(a_1,a_2) のとき、|\\overrightarrow{a}|=\\sqrt{a_1^2+a_2^2}\\\\[1em]\r\n",
+        "4. 演算 \\quad k, l を実数とするとき\\\\\r\n",
+        "\\quad \\bullet \\quad (a_1,a_2)=(b_1,b_2)=(a_1+b_1, a_2+b_2)\\\\\r\n",
+        "\\quad \\bullet \\quad k(a_1, a_2)=(ka_1, ka_2)\\\\\r\n",
+        "\\quad 一般に \r\n"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "3. 大きさ \\quad \\overrightarrow{a}=(a_1,a_2) のとき、|\\overrightarrow{a}|=\\sqrt{a_1^2+a_2^2}\\\\[1em]\n4. 演算 \\quad k, l を実数とするとき\\\\\n\\quad \\bullet \\quad (a_1,a_2)=(b_1,b_2)=(a_1+b_1, a_2+b_2)\\\\\n\\quad \\bullet \\quad k(a_1, a_2)=(ka_1, ka_2)\\\\\n\\quad 一般に ",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
