Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNgX2jU3wBEur2yCQi6VAoh",
+      "authorship_tag": "ABX9TyM5tdZINspU6po401LlDowv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -306,12 +306,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W7PxgE-xk_Ut",
-        "outputId": "772c397e-588d-4bf2-b19c-bfbb722d30a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        }
+        },
+        "id": "W7PxgE-xk_Ut",
+        "outputId": "772c397e-588d-4bf2-b19c-bfbb722d30a1"
       },
       "source": [
         "# 点の座標とベクトルの成分\r\n",
@@ -347,11 +347,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_6bWGJyymGmm"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        },
+        "id": "_6bWGJyymGmm",
+        "outputId": "a459e8b8-5225-4e96-b517-63f2d42fade2"
       },
       "source": [
         "# ベクトルの内積\r\n",
-        "%%latex\r\n"
+        "%%latex\r\n",
+        "ベクトルの内積の定義\\\\\r\n",
+        "\\overrightarrow{0}~でない 2つのベクトル~\\overrightarrow{a}, \\overrightarrow{b}~のなす角を~\\theta~とする。\\\\\r\n",
+        "このとき、積~|\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta~を~\\overrightarrow{a}~と~\\overrightarrow{b}~の内積といい、\r\n",
+        "\\overrightarrow{a} \\cdot \\overrightarrow{b}~で表す。\\\\\r\n",
+        "すなわち内積~\\overrightarrow{a} \\cdot \\overrightarrow{b}~は\\\\[1em]\r\n",
+        "\\quad \\overrightarrow{a} \\cdot \\overrightarrow{b} =|\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta\r\n",
+        "\\quad ただし \\quad 0^\\circ \\leq \\theta \\leq 180^\\circ \\\\[1em]\r\n",
+        "で定義される実数である。\\\\\r\n",
+        "\\overrightarrow{a}=\\overrightarrow{0}~または~\\overrightarrow{b}=\\overrightarrow{0}~のときは~\\overrightarrow{a} \\cdot \\overrightarrow{b} = 0 ~と定める。"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "ベクトルの内積の定義\\\\\n\\overrightarrow{0}~でない 2つのベクトル~\\overrightarrow{a}, \\overrightarrow{b}~のなす角を~\\theta~とする。\\\\\nこのとき、積~|\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta~を~\\overrightarrow{a}~と~\\overrightarrow{b}~の内積といい、\n\\overrightarrow{a} \\cdot \\overrightarrow{b}~で表す。\\\\\nすなわち内積~\\overrightarrow{a} \\cdot \\overrightarrow{b}~は\\\\[1em]\n\\quad \\overrightarrow{a} \\cdot \\overrightarrow{b} =|\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta\n\\quad ただし \\quad 0^\\circ \\leq \\theta \\leq 180^\\circ \\\\[1em]\nで定義される実数である。\\\\\n\\overrightarrow{a}=\\overrightarrow{0}~または~\\overrightarrow{b}=\\overrightarrow{0}~のときは~\\overrightarrow{a} \\cdot \\overrightarrow{b} = 0 ~と定める。",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oZjcaWOpNisc"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
