Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMC8I4ljqkPeRXzex8Jw72N",
+      "authorship_tag": "ABX9TyOUpVvVm5tVAs8kkSXrP9e4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -562,10 +562,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 215
+          "height": 241
         },
         "id": "W0zQToIBzjyq",
-        "outputId": "33a50d3d-783a-4972-a713-da1e4c4a10ef"
+        "outputId": "8f7df5d7-0728-4cb5-c309-b5ee8cfe7288"
       },
       "source": [
         "# 線分の分点の位置ベクトル\r\n",
@@ -583,18 +583,15 @@
         "\\\\\r\n",
         "三角形の重心 \\quad \r\n",
         "\\overrightarrow{g}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}+\\overrightarrow{c}}{3}\\\\\r\n",
-        "共点条件\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n"
+        "共点条件\\quad \\overrightarrow{\\mathrm{OP}} = \\overrightarrow{\\mathrm{OQ}} = \\overrightarrow{\\mathrm{OR}}\r\n",
+        "\\quad \\Longleftrightarrow \\quad \\mathrm{P,Q,R}~は一致する。\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\n線分~\\mathrm{AB}~について\\\\\n内分点 \\quad m:n~の比に内分する点~\\mathrm{P}(\\overrightarrow{p})~は \\quad \n\\overrightarrow{p}=\\frac{n\\overrightarrow{a}+m\\overrightarrow{b}}{m+n}\n\\\\\n外分点 \\quad m:n~の比に外分する点~\\mathrm{Q}(\\overrightarrow{q})~は \\quad \n\\overrightarrow{p}=\\frac{-n\\overrightarrow{a}+m\\overrightarrow{b}}{m-n}\n\\\\\n特に \\quad 中点~\\mathrm{M}(\\overrightarrow{m})~は \\quad~は \\quad\n\\overrightarrow{m}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}}{2}\n\\\\\n三角形の重心 \\quad \n\\overrightarrow{g}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}+\\overrightarrow{c}}{3}",
+            "text/latex": "\\displaystyle\n線分~\\mathrm{AB}~について\\\\\n内分点 \\quad m:n~の比に内分する点~\\mathrm{P}(\\overrightarrow{p})~は \\quad \n\\overrightarrow{p}=\\frac{n\\overrightarrow{a}+m\\overrightarrow{b}}{m+n}\n\\\\\n外分点 \\quad m:n~の比に外分する点~\\mathrm{Q}(\\overrightarrow{q})~は \\quad \n\\overrightarrow{p}=\\frac{-n\\overrightarrow{a}+m\\overrightarrow{b}}{m-n}\n\\\\\n特に \\quad 中点~\\mathrm{M}(\\overrightarrow{m})~は \\quad~は \\quad\n\\overrightarrow{m}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}}{2}\n\\\\\n三角形の重心 \\quad \n\\overrightarrow{g}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}+\\overrightarrow{c}}{3}\\\\\n共点条件\\quad \\overrightarrow{\\mathrm{OP}} = \\overrightarrow{\\mathrm{OQ}} = \\overrightarrow{\\mathrm{OR}}\n\\quad \\Longleftrightarrow \\quad \\mathrm{P,Q,R}~は一致する。",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -617,11 +614,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3YItpGqG13RL"
+        "id": "3YItpGqG13RL",
+        "outputId": "196a8c51-49be-4a6e-9812-52183b1d5cf4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 209
+        }
       },
       "source": [
-        "# ベクトル方程式\r\n",
-        "%%latex\r\n"
+        "# ベクトル方程式 p.306\r\n",
+        "%%latex\r\n",
+        "直線のベクトル方程式\\\\\r\n",
+        "\\mathrm{P}(\\overrightarrow{p})~を直線上の点とする。 s, t~ は媒介変数。\\\\\r\n",
+        "1.~点~\\mathrm{A}(\\overrightarrow{a})~を通り、\\overrightarrow{d} ~ [\\neq \\overrightarrow{0}]\r\n",
+        "に平行な直線\\\\\r\n",
+        "\\quad \\quad \\overrightarrow{p} = \\overrightarrow{a} + t \\overrightarrow{d}\r\n",
+        "\\quad \\quad \\overrightarrow{d}~は直線の方向ベクトル\\\\\r\n",
+        "2.~異なる2点~\r\n",
+        "\\mathrm{A}(\\overrightarrow{a}),\\mathrm{B}(\\overrightarrow{b})~を通る直線\\\\\r\n",
+        "\\quad \\quad \\overrightarrow{p} = (1-t)\\overrightarrow{a} + t \\overrightarrow{b}\r\n",
+        "\\quad \\quad \\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b}, ~ s+t=1 \\\\\r\n",
+        "3.~点~\\mathrm{A}(\\overrightarrow{a})~を通り、\\overrightarrow{n}~ [\\neq \\overrightarrow{0}]~\r\n",
+        "に垂直な直線\\\\\r\n",
+        "\\quad \\quad \\overrightarrow{n} \\cdot (\\overrightarrow{p} - \\overrightarrow{a}) = 0\r\n",
+        "\\quad \\quad \\overrightarrow{n}~は直線の法線ベクトル"
+      ],
+      "execution_count": 178,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "直線のベクトル方程式\\\\\n\\mathrm{P}(\\overrightarrow{p})~を直線上の点とする。 s, t~ は媒介変数。\\\\\n1.~点~\\mathrm{A}(\\overrightarrow{a})~を通り、\\overrightarrow{d} ~ [\\neq \\overrightarrow{0}]\nに平行な直線\\\\\n\\quad \\quad \\overrightarrow{p} = \\overrightarrow{a} + t \\overrightarrow{d}\n\\quad \\quad \\overrightarrow{d}~は直線の方向ベクトル\\\\\n2.~異なる2点~\n\\mathrm{A}(\\overrightarrow{a}),\\mathrm{B}(\\overrightarrow{b})~を通る直線\\\\\n\\quad \\quad \\overrightarrow{p} = (1-t)\\overrightarrow{a} + t \\overrightarrow{b}\n\\quad \\quad \\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b}, ~ s+t=1 \\\\\n3.~点~\\mathrm{A}(\\overrightarrow{a})~を通り、\\overrightarrow{n}~ [\\neq \\overrightarrow{0}]~\nに垂直な直線\\\\\n\\quad \\quad \\overrightarrow{n} \\cdot (\\overrightarrow{p} - \\overrightarrow{a}) = 0\n\\quad \\quad \\overrightarrow{n}~は直線の法線ベクトル",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kjluDcENcDcz"
+      },
+      "source": [
+        "# 円のベクトル方程式\r\n",
+        "%%latex\r\n",
+        "円のベクトル方程式\\\\\r\n"
       ],
       "execution_count": null,
       "outputs": []
