Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOUpVvVm5tVAs8kkSXrP9e4",
+      "authorship_tag": "ABX9TyPYqYi5btE+Cl/tbw2vW2uu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -615,11 +615,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "3YItpGqG13RL",
-        "outputId": "196a8c51-49be-4a6e-9812-52183b1d5cf4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 209
-        }
+        },
+        "outputId": "196a8c51-49be-4a6e-9812-52183b1d5cf4"
       },
       "source": [
         "# ベクトル方程式 p.306\r\n",
@@ -658,15 +658,119 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kjluDcENcDcz"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        },
+        "id": "kjluDcENcDcz",
+        "outputId": "d7b5aeec-d77f-4b8f-b654-323fd425a38c"
       },
       "source": [
-        "# 円のベクトル方程式\r\n",
+        "# 円のベクトル方程式 p.306\r\n",
         "%%latex\r\n",
-        "円のベクトル方程式\\\\\r\n"
+        "円のベクトル方程式\\\\\r\n",
+        "\\mathrm{P}(\\overrightarrow{p})~を円上の点とする。\\\\\r\n",
+        "1.~中心~\\mathrm{C}(\\overrightarrow{c})、半径~r~の円~|\\overrightarrow{p}-\\overrightarrow{c}|=r\\\\\r\n",
+        "2.~\\mathrm{A}(\\overrightarrow{a}),\\mathrm{B}(\\overrightarrow{b})、線分~\\mathrm{AB}~を直径とする円\\\\\r\n",
+        "\\quad \\quad (\\overrightarrow{p}-\\overrightarrow{a}) \\cdot (\\overrightarrow{p} - \\overrightarrow{b}) = 0 \\\\"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "円のベクトル方程式\\\\\n\\mathrm{P}(\\overrightarrow{p})~を円上の点とする。\\\\\n1.~中心~\\mathrm{C}(\\overrightarrow{c})、半径~r~の円~|\\overrightarrow{p}-\\overrightarrow{c}|=r\\\\\n2.~\\mathrm{A}(\\overrightarrow{a}),\\mathrm{B}(\\overrightarrow{b})、線分~\\mathrm{AB}~を直径とする円\\\\\n\\quad \\quad (\\overrightarrow{p}-\\overrightarrow{a}) \\cdot (\\overrightarrow{p} - \\overrightarrow{b}) = 0 \\\\",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nHiuH6Q21Zrl",
+        "outputId": "8918fa10-87c2-4ac8-c2a2-bb745767d182",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 133
+        }
+      },
+      "source": [
+        "# AP = sAB + tAC の点 P の存在範囲\r\n",
+        "%%latex\r\n",
+        "\\overrightarrow{\\mathrm{AP}} = s\\overrightarrow{\\mathrm{AB}} + t\\overrightarrow{\\mathrm{AC}} の点~\\mathrm{P}~の存在範囲\\\\\r\n",
+        "\\overrightarrow{\\mathrm{AB}} \\neq 0, \\overrightarrow{\\mathrm{AC}} \\neq 0, \\neg (\\overrightarrow{\\mathrm{AB}} \\parallel \\overrightarrow{\\mathrm{AC}})\r\n",
+        "~とする。\\\\\r\n",
+        "1.~s+t=1 \\quad \\Longrightarrow~直線~\\mathrm{BC}\\\\\r\n",
+        "2.~s+t=1,s \\geq 0, t \\geq 0 \\quad \\Longrightarrow~線分~\\mathrm{BC}\\\\\r\n",
+        "3.~s \\geq 0, t \\geq 0, s+t \\leq 1 \\quad \\Longrightarrow \\triangle \\mathrm{ABC}~の周と内部"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\overrightarrow{\\mathrm{AP}} = s\\overrightarrow{\\mathrm{AB}} + t\\overrightarrow{\\mathrm{AC}} の点~\\mathrm{P}~の存在範囲\\\\\n\\overrightarrow{\\mathrm{AB}} \\neq 0, \\overrightarrow{\\mathrm{AC}} \\neq 0, \\neg (\\overrightarrow{\\mathrm{AB}} \\parallel \\overrightarrow{\\mathrm{AC}})\n~とする。\\\\\n1.~s+t=1 \\quad \\Longrightarrow~直線~\\mathrm{BC}\\\\\n2.~s+t=1,s \\geq 0, t \\geq 0 \\quad \\Longrightarrow~線分~\\mathrm{BC}\\\\\n3.~s \\geq 0, t \\geq 0, s+t \\leq 1 \\quad \\Longrightarrow \\triangle \\mathrm{ABC}~の周と内部",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bG-QVoo94J3_",
+        "outputId": "e9fc4a00-257e-43e3-d3eb-03240a6cea0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
+      },
+      "source": [
+        "# ベクトル方程式と座標\r\n",
+        "%%latex\r\n",
+        "\\displaystyle\r\n",
+        "ベクトル方程式と座標\\\\\r\n",
+        "\\mathrm{O}(0,0), \\overrightarrow{\\mathrm{OP}}=(x,y)~とすると~\\mathrm{P}(x,y)~であり、\r\n",
+        "成分と座標が結びつく。 例えば、\\\\\r\n",
+        "1.~\\overrightarrow{p}=\\overrightarrow{a}+t\\overrightarrow{d}~から\r\n",
+        "\\left\\{ \r\n",
+        "\\begin{array}{r}\r\n",
+        " x=x_1+ct\\\\\r\n",
+        " y=y_1+dt\r\n",
+        "\\end{array}\r\n",
+        "\\right.\r\n",
+        "\\quad \\quad \\overrightarrow{d}=(c,d)~は方向ベクトル\\\\\r\n",
+        "2.~\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\displaystyle\nベクトル方程式と座標\\\\\n\\mathrm{O}(0,0), \\overrightarrow{\\mathrm{OP}}=(x,y)~とすると~\\mathrm{P}(x,y)~であり、\n成分と座標が結びつく。 例えば、\\\\\n1.~\\overrightarrow{p}=\\overrightarrow{a}+t\\overrightarrow{d}~から\n\\left\\{ \n\\begin{array}{r}\n x=x_1+ct\\\\\n y=y_1+dt\n\\end{array}\n\\right.\n\\quad \\quad \\overrightarrow{d}=(c,d)~は方向ベクトル\\\\",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
