Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMFUp3bkQHo6P2zKf5BdfJf",
+      "authorship_tag": "ABX9TyO4CWhg34RJzHknn8obqsoS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -864,36 +864,36 @@
         "id": "eZXJVKG5BD0w",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 95
+          "height": 265
         },
-        "outputId": "b26a3d46-72ed-4553-9321-6233a47c8d12"
+        "outputId": "09a0eaba-049c-4f85-ac7e-2c2db0b65594"
       },
       "source": [
         "# メラネウスの定理、チェバの定理 p.48\r\n",
         "%%latex\r\n",
         "\\displaystyle\r\n",
         "1.~メネラウスの定理\\\\\r\n",
-        "\\quad \\triangle \\mathrm{ABC}~ の辺~ \\mathrm{BC, CA, AB}~ またはその延長が、三角形の頂点を通らない~1~つの直線とそれぞれ点\r\n",
-        "~\\mathrm{P,Q,R}~ で交わるとき\\\\\r\n",
-        "\\quad \\quad \\quad \\quad \\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\r\n",
+        "\\triangle \\mathrm{ABC}~ の辺~ \\mathrm{BC, CA, AB}~ またはその延長が、三角形の頂点を通らない~1~つの直線と\\\\\r\n",
+        "それぞれ点\r\n",
+        "~\\mathrm{P,Q,R}~ で交わるとき\\\\[1em]\r\n",
+        "\\quad \\quad \\quad \\quad \r\n",
+        "\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\r\n",
+        "\\\\[1em]\r\n",
         "2.~チェバの定理\\\\\r\n",
-        "\\quad \\triangle \\mathrm{ABC}~ の~3~頂点~ \\mathrm{A,B,C}~ \r\n",
-        "と三角形の\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "またはその延長が、三角形の頂点を通らない~1~つの直線とそれぞれ点\r\n",
-        "~\\mathrm{P,Q,R}~ で交わるとき\\\\\r\n",
-        "\\quad \\quad \\quad \\quad \\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\r\n",
+        "\\triangle \\mathrm{ABC}~ の~3~頂点~ \\mathrm{A,B,C}~ \r\n",
+        "と三角形の辺上にもその延長上にもない点~O~とを結ぶ直線が、\\\\\r\n",
+        "対辺~\\mathrm{BC, CA, AB}~ \r\n",
+        "またはその延長と交わるとき、交点をそれぞれ~\\mathrm{P,Q,R}~ とすると\\\\[1em]\r\n",
+        "\\quad \\quad \\quad \\quad \r\n",
+        "\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\r\n",
         "\r\n"
       ],
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\n1.~メネラウスの定理\\\\\n\\quad \\triangle \\mathrm{ABC}~ の辺~ \\mathrm{BC, CA, AB}~ またはその延長が、三角形の頂点を通らない~1~つの直線とそれぞれ点\n~\\mathrm{P,Q,R}~ で交わるとき\\\\\n\\quad \\quad \\quad \\quad \\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\n",
+            "text/latex": "\\displaystyle\n1.~メネラウスの定理\\\\\n\\triangle \\mathrm{ABC}~ の辺~ \\mathrm{BC, CA, AB}~ またはその延長が、三角形の頂点を通らない~1~つの直線と\\\\\nそれぞれ点\n~\\mathrm{P,Q,R}~ で交わるとき\\\\[1em]\n\\quad \\quad \\quad \\quad \n\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\n\\\\[1em]\n2.~チェバの定理\\\\\n\\triangle \\mathrm{ABC}~ の~3~頂点~ \\mathrm{A,B,C}~ \nと三角形の辺上にもその延長上にもない点~O~とを結ぶ直線が、\\\\\n対辺~\\mathrm{BC, CA, AB}~ \nまたはその延長と交わるとき、交点をそれぞれ~\\mathrm{P,Q,R}~ とすると\\\\[1em]\n\\quad \\quad \\quad \\quad \n\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\n",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -902,6 +902,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xoAjeYBw9lUs"
+      },
+      "source": [
+        "# 空間座標、空間ベクトル\r\n"
       ]
     }
   ]
