--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO4CWhg34RJzHknn8obqsoS",
+      "authorship_tag": "ABX9TyOgPdihkMRCs9DwERskHz5n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -187,32 +187,34 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 240
+          "height": 302
         },
         "id": "xAz52PQFUKJI",
-        "outputId": "e0007760-bc49-4943-93c4-a364ac600374"
+        "outputId": "e43970c8-1c48-4d4a-b139-5e6f3ac21833"
       },
       "source": [
         "%%latex\r\n",
         "平行は\\, \\overrightarrow{a} \\parallel \\overrightarrow{b} \\, と書く。\\\\\r\n",
-        "ベクトルの平行条件とは\\, \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\r\n",
-        "\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Leftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b} となる実数\\, k \\,がある。\\\\\r\n",
-        " \\\\\r\n",
+        "日本の平行記号は~//~というように斜めに書くが、latex~では縦の~2~本線である。\r\n",
+        "\\\\[0.8em]\r\n",
+        "ベクトルの平行条件\\quad \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\r\n",
+        "\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Longleftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b} となる実数\\, k \\,がある。\\\\\r\n",
+        "\\\\[1em]\r\n",
         "分解 \\\\\r\n",
         "\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\, \\overrightarrow{a} と \r\n",
         "\\overrightarrow{b} が平行でないとき, \\\\\r\n",
         "任意のベクトル\\overrightarrow{p} は、次の形にただ1通りに表される。\\\\\r\n",
-        "\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b} \\quad ただし,\\, s,\\, t\\, は実数。\\\\\r\n",
+        "\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b} \\quad ただし,\\, s,\\, t\\, は実数。\\\\[0.8em]\r\n",
         "このことから、次の性質が成り立つ。k,l,m,n\\, は実数とする。 \\\\\r\n",
-        "k\\overrightarrow{a} + l \\overrightarrow{b} \\Leftrightarrow  k=m,\\, l=n \\\\\r\n",
-        "特に\\,  k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Leftrightarrow  k=l=0 "
+        "k\\overrightarrow{a} + l \\overrightarrow{b} = m \\overrightarrow{a} + n\\overrightarrow{b} \\Longleftrightarrow  k=m,\\, l=n \\\\\r\n",
+        "特に\\,  k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Longleftrightarrow  k=l=0 "
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "平行は\\, \\overrightarrow{a} \\parallel \\overrightarrow{b} \\, と書く。\\\\\nベクトルの平行条件とは\\, \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\n\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Leftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b} となる実数\\, k \\,がある。\\\\\n \\\\\n分解 \\\\\n\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\, \\overrightarrow{a} と \\overrightarrow{b} が平行でないとき, \\\\\n任意のベクトル\\overrightarrow{p} は、次の形にただ1通りに表される。\\\\\n\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b} \\quad ただし,\\, s,\\, t\\, は実数。\\\\\nこのことから、次の性質が成り立つ。k,l,m,n\\, は実数とする。 \\\\\nk\\overrightarrow{a} + l \\overrightarrow{b} \\Leftrightarrow  k=m,\\, l=n \\\\\n特に\\,  k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Leftrightarrow  k=l=0 ",
+            "text/latex": "平行は\\, \\overrightarrow{a} \\parallel \\overrightarrow{b} \\, と書く。\\\\\n日本の平行記号は~//~というように斜めに書くが、latex~では縦の~2~本線である。\n\\\\[0.8em]\nベクトルの平行条件\\quad \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\n\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Longleftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b} となる実数\\, k \\,がある。\\\\\n\\\\[1em]\n分解 \\\\\n\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\, \\overrightarrow{a} と \n\\overrightarrow{b} が平行でないとき, \\\\\n任意のベクトル\\overrightarrow{p} は、次の形にただ1通りに表される。\\\\\n\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b} \\quad ただし,\\, s,\\, t\\, は実数。\\\\[0.8em]\nこのことから、次の性質が成り立つ。k,l,m,n\\, は実数とする。 \\\\\nk\\overrightarrow{a} + l \\overrightarrow{b} = m \\overrightarrow{a} + n\\overrightarrow{b} \\Longleftrightarrow  k=m,\\, l=n \\\\\n特に\\,  k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Longleftrightarrow  k=l=0 ",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -241,8 +243,8 @@
         "\\quad \\mathrm{A} の座標を(a_1,a_2)とするとき、\\overrightarrow{a} は次のように表される。\\\\\r\n",
         "\\quad 基本ベクトル表示 \\quad \\overrightarrow{a}=a_1 \\overrightarrow{e_1} + a_2 \\overrightarrow{e_2}\\\\\r\n",
         "\\quad \\overrightarrow{e_1}=(1,0),\\overrightarrow{e_2}=(0,1) を基本ベクトルという。\\\\[1em]\r\n",
-        "2. 相等 \\quad (a_1,a_2)=(b_1,b_2) \\Leftrightarrow a_1=b_1,a_2=b_2\\\\\r\n",
-        "\\quad 特に (a_1,a_2)=\\overrightarrow{0} \\Leftrightarrow a_1=0, a_2=0\\\\[1em]"
+        "2. 相等 \\quad (a_1,a_2)=(b_1,b_2) \\Longleftrightarrow a_1=b_1,a_2=b_2\\\\\r\n",
+        "\\quad 特に (a_1,a_2)=\\overrightarrow{0} \\Longleftrightarrow a_1=0, a_2=0\\\\[1em]"
       ],
       "execution_count": null,
       "outputs": [
@@ -562,10 +564,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 241
+          "height": 257
         },
         "id": "W0zQToIBzjyq",
-        "outputId": "8f7df5d7-0728-4cb5-c309-b5ee8cfe7288"
+        "outputId": "d7d09207-6098-4dae-e721-faf23b589a89"
       },
       "source": [
         "# 線分の分点の位置ベクトル\r\n",
@@ -582,16 +584,16 @@
         "\\overrightarrow{m}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}}{2}\r\n",
         "\\\\\r\n",
         "三角形の重心 \\quad \r\n",
-        "\\overrightarrow{g}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}+\\overrightarrow{c}}{3}\\\\\r\n",
+        "\\overrightarrow{g}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}+\\overrightarrow{c}}{3}\\\\[1em]\r\n",
         "共点条件\\quad \\overrightarrow{\\mathrm{OP}} = \\overrightarrow{\\mathrm{OQ}} = \\overrightarrow{\\mathrm{OR}}\r\n",
         "\\quad \\Longleftrightarrow \\quad \\mathrm{P,Q,R}~は一致する。\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\n線分~\\mathrm{AB}~について\\\\\n内分点 \\quad m:n~の比に内分する点~\\mathrm{P}(\\overrightarrow{p})~は \\quad \n\\overrightarrow{p}=\\frac{n\\overrightarrow{a}+m\\overrightarrow{b}}{m+n}\n\\\\\n外分点 \\quad m:n~の比に外分する点~\\mathrm{Q}(\\overrightarrow{q})~は \\quad \n\\overrightarrow{p}=\\frac{-n\\overrightarrow{a}+m\\overrightarrow{b}}{m-n}\n\\\\\n特に \\quad 中点~\\mathrm{M}(\\overrightarrow{m})~は \\quad~は \\quad\n\\overrightarrow{m}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}}{2}\n\\\\\n三角形の重心 \\quad \n\\overrightarrow{g}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}+\\overrightarrow{c}}{3}\\\\\n共点条件\\quad \\overrightarrow{\\mathrm{OP}} = \\overrightarrow{\\mathrm{OQ}} = \\overrightarrow{\\mathrm{OR}}\n\\quad \\Longleftrightarrow \\quad \\mathrm{P,Q,R}~は一致する。",
+            "text/latex": "\\displaystyle\n線分~\\mathrm{AB}~について\\\\\n内分点 \\quad m:n~の比に内分する点~\\mathrm{P}(\\overrightarrow{p})~は \\quad \n\\overrightarrow{p}=\\frac{n\\overrightarrow{a}+m\\overrightarrow{b}}{m+n}\n\\\\\n外分点 \\quad m:n~の比に外分する点~\\mathrm{Q}(\\overrightarrow{q})~は \\quad \n\\overrightarrow{p}=\\frac{-n\\overrightarrow{a}+m\\overrightarrow{b}}{m-n}\n\\\\\n特に \\quad 中点~\\mathrm{M}(\\overrightarrow{m})~は \\quad~は \\quad\n\\overrightarrow{m}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}}{2}\n\\\\\n三角形の重心 \\quad \n\\overrightarrow{g}=\\frac{\\overrightarrow{a}+\\overrightarrow{b}+\\overrightarrow{c}}{3}\\\\[1em]\n共点条件\\quad \\overrightarrow{\\mathrm{OP}} = \\overrightarrow{\\mathrm{OQ}} = \\overrightarrow{\\mathrm{OR}}\n\\quad \\Longleftrightarrow \\quad \\mathrm{P,Q,R}~は一致する。",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -741,9 +743,9 @@
         "id": "bG-QVoo94J3_",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 171
         },
-        "outputId": "e9fc4a00-257e-43e3-d3eb-03240a6cea0d"
+        "outputId": "147c1454-6b4c-4edd-ae60-42e30a0a6f44"
       },
       "source": [
         "# ベクトル方程式と座標 p.306\r\n",
@@ -760,17 +762,16 @@
         "\\end{array}\r\n",
         "\\right.\r\n",
         "\\quad \\quad \\overrightarrow{d}=(c,d)~は方向ベクトル\\\\\r\n",
-        "2.~\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n"
+        "2.~\\overrightarrow{n} \\cdot (\\overrightarrow{p}-\\overrightarrow{a})=0~ から~ a(x-x_1)+b(y-y_1)=0 \\quad \\overrightarrow{n}=(a,b)~ は法線ベクトル\\\\\r\n",
+        "3.~|\\overrightarrow{p}-\\overrightarrow{c}|^2=r^2~から \\quad (x-a)^2+(y-b)^2=r^2\\\\\r\n",
+        "4.~(\\overrightarrow{p}-\\overrightarrow{c}) \\cdot (\\overrightarrow{p_0}-\\overrightarrow{c})=r^2~ [円の接線]~ から ~(x-a)(x_1-a)+(y-b)(y_1-b)=r^2\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\nベクトル方程式と座標\\\\\n\\mathrm{O}(0,0), \\overrightarrow{\\mathrm{OP}}=(x,y)~とすると~\\mathrm{P}(x,y)~であり、\n成分と座標が結びつく。 例えば、\\\\\n1.~\\overrightarrow{p}=\\overrightarrow{a}+t\\overrightarrow{d}~から\n\\left\\{ \n\\begin{array}{r}\n x=x_1+ct\\\\\n y=y_1+dt\n\\end{array}\n\\right.\n\\quad \\quad \\overrightarrow{d}=(c,d)~は方向ベクトル\\\\",
+            "text/latex": "\\displaystyle\nベクトル方程式と座標\\\\\n\\mathrm{O}(0,0), \\overrightarrow{\\mathrm{OP}}=(x,y)~とすると~\\mathrm{P}(x,y)~であり、\n成分と座標が結びつく。 例えば、\\\\\n1.~\\overrightarrow{p}=\\overrightarrow{a}+t\\overrightarrow{d}~から\n\\left\\{ \n\\begin{array}{r}\n x=x_1+ct\\\\\n y=y_1+dt\n\\end{array}\n\\right.\n\\quad \\quad \\overrightarrow{d}=(c,d)~は方向ベクトル\\\\\n2.~\\overrightarrow{n} \\cdot (\\overrightarrow{p}-\\overrightarrow{a})=0~ から~ a(x-x_1)+b(y-y_1)=0 \\quad \\overrightarrow{n}=(a,b)~ は法線ベクトル\\\\\n3.~|\\overrightarrow{p}-\\overrightarrow{c}|^2=r^2~から \\quad (x-a)^2+(y-b)^2=r^2\\\\\n4.~(\\overrightarrow{p}-\\overrightarrow{c}) \\cdot (\\overrightarrow{p_0}-\\overrightarrow{c})=r^2~ [円の接線]~ から ~(x-a)(x_1-a)+(y-b)(y_1-b)=r^2\n\n\n",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -888,7 +889,7 @@
         "\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\r\n",
         "\r\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
