Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMBF70BtPs7uVV60ujuvpM/",
+      "authorship_tag": "ABX9TyODFX1eT3oENjVdoKXBkH71",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1000,12 +1000,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UMnMGx9i3uJM",
-        "outputId": "7ab14c0d-f4d7-440a-d845-5a1ff6505ae4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "UMnMGx9i3uJM",
+        "outputId": "7ab14c0d-f4d7-440a-d845-5a1ff6505ae4"
       },
       "source": [
         "# p.58\r\n",
@@ -1025,6 +1025,41 @@
           "output_type": "display_data",
           "data": {
             "text/latex": "1.~なす角\\\\[0.8em]\n2~直線~l,m~が平行でないとき、任意の~1~点を通る~2~直線~l',m'~を、それぞれ~l,m~に平行に引く。\\\\\n~l',m'~のなす角を2~直線~l,m~のなす角という。\\\\\nこの角が直角であるとき、~l~と~m~は垂直であるといい、l \\perp m~と書く。 \\\\\nこのとき~l~と~m~は直交するという。\\\\[0.8em]\n\n2.~直線と平面の垂直\\\\[0.8em]\n直線~h~が、平面~\\alpha~上のすべての直線に垂直であるとき、はに垂直であるといい、h \\perp \\alpha~で表す。\\\\",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bnfPFelJBS_V",
+        "outputId": "656b6a69-eca9-4cdb-9931-768924d568ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 95
+        }
+      },
+      "source": [
+        "# 空間の座標 p.58\r\n",
+        "%%latex\r\n",
+        "空間の座標\\\\[0.8em]\r\n",
+        "座標軸 \\quad 定点~O~を共通の原点とする数直線~x,x', y,y', zz'~を、その~2~つずつが直交するようにとるとき、\\\\\r\n",
+        "数直線~x,x', y,y', zz'~をそれぞれ~x~軸、~y~軸、~z~軸といい、まとめて座標軸という。\\\\[0.8em]\r\n",
+        "\r\n",
+        "座標平面 \\quad x~軸と~y~軸、~z~軸"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "空間の座標\\\\[0.8em]\n座標軸 \\quad 定点~O~を共通の原点とする数直線~x,x', y,y', zz'~を、その~2~つずつが直交するようにとるとき、\\\\\n数直線~x,x', y,y', zz'~をそれぞれ~x~軸、~y~軸、~z~軸といい、まとめて座標軸という。",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
