Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -382,25 +382,26 @@
         "id": "205xo7fYfLLI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 144
+          "height": 164
         },
-        "outputId": "106c8011-d6db-4a6c-b37b-3cfea0dd33d1"
+        "outputId": "164676c5-52c2-4dbf-fe3e-b8b39b182e92"
       },
       "source": [
         "%%latex\n",
         "\\mathrm{a b c d e f A B C }\\\\\n",
+        "\\bm{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n",
         "\\text{a b c d e f A B C }\\\\\n",
         "\\mathbb{a b c d e f A B C }\\\\\n",
         "\\mathcal {abcdefABCDEF}\\\\\n",
         "\\mathfrak {abcdefABCDEF}\\\\\n",
         "\\mathit {abcdefABCDEF}\\\\"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\mathrm{a b c d e f A B C }\\\\\n\\text{a b c d e f A B C }\\\\\n\\mathbb{a b c d e f A B C }\\\\\n\\mathcal {abcdefABCDEF}\\\\\n\\mathfrak {abcdefABCDEF}\\\\\n\\mathit {abcdefABCDEF}\\\\",
+            "text/latex": "\\mathrm{a b c d e f A B C }\\\\\n\\bm{a b c d e f A B C }\\\\\n\\text{a b c d e f A B C }\\\\\n\\mathbb{a b c d e f A B C }\\\\\n\\mathcal {abcdefABCDEF}\\\\\n\\mathfrak {abcdefABCDEF}\\\\\n\\mathit {abcdefABCDEF}\\\\",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
