Colaboratory を使用して作成しました

--- a/linear_fujioka.ipynb
+++ b/linear_fujioka.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_fujioka.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPxNoV7WGc6xbR+CRZKNQxU",
+      "authorship_tag": "ABX9TyOsBbHN76bTU8kesJsCrDgM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,15 +44,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lwSLe2bMF_QF",
-        "outputId": "8c79275b-6ef7-4c5d-d6a8-ea38a0159aec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        }
+        },
+        "id": "lwSLe2bMF_QF",
+        "outputId": "ce41903d-aa24-4b1c-d8a5-722c41e7db04"
       },
       "source": [
-        "# 行列\r\n",
+        "# 行列 p.2\r\n",
         "%%latex\r\n",
         "\\displaystyle\r\n",
         "\\bullet~~行列とは数を長方形状に並べたものである。\\\\\r\n",
@@ -64,7 +64,7 @@
         "\\bullet~行ベクトル、列ベクトルをあわせて数ベクトルという。\\\\\r\n",
         "\\bullet~すべての成分が~0~の数ベクトルを零ベクトルという。\\\\"
       ],
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -83,23 +83,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HZifWg5xISWU",
-        "outputId": "71faeef9-f7b6-450e-de08-23c52eb5a3a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 39
-        }
+          "height": 203
+        },
+        "id": "HZifWg5xISWU",
+        "outputId": "2b4f3088-2182-477b-956d-297ce034bda0"
       },
       "source": [
         "%%latex\r\n",
-        "自然数~i=1,2,\\cdots,m~および"
+        "自然数~i=1,2,\\cdots,m~および~j=1,2,\\cdots,n~に対して、数~a_{ij}~が対応しているとする。 \\\\\r\n",
+        "このとき、mn~個の数~a_{11},a_{12},\\cdots,a_{mn}~を丸括弧 ~(~)~や角括弧~[~]~を用いて長方形状に\\\\[0.8em]\r\n",
+        "\\begin{pmatrix}\r\n",
+        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\r\n",
+        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\r\n",
+        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\r\n",
+        "    a_{m1} & a_{m2} & \\ldots & a_{mn}\r\n",
+        "\\end{pmatrix}, \\quad\r\n",
+        "\\begin{bmatrix}\r\n",
+        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\r\n",
+        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\r\n",
+        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\r\n",
+        "    a_{m1} & a_{m2} & \\ldots & a_{mn}\r\n",
+        "\\end{bmatrix} \\\\[0.8em]\r\n",
+        "と並べたものを~m \\times n~ 行列または~m~行~n~列の行列という。\\\\\r\n"
       ],
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "自然数~i=1,2,\\cdots,m~および",
+            "text/latex": "自然数~i=1,2,\\cdots,m~および~j=1,2,\\cdots,n~に対して、数~a_{ij}~が対応しているとする。 \\\\\nこのとき、mn~個の数~a_{11},a_{12},\\cdots,a_{mn}~を丸括弧 ~(~)~や角括弧~[~]~を用いて長方形状に\\\\[0.8em]\n\\begin{pmatrix}\n    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & a_{m2} & \\ldots & a_{mn}\n\\end{pmatrix}, \\quad\n\\begin{bmatrix}\n    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & a_{m2} & \\ldots & a_{mn}\n\\end{bmatrix} \\\\[0.8em]\nと並べたものを~m \\times n~ 行列または~m~行~n~列の行列という。\\\\",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
